# agentic-systems-misc

./: .cspell.json  .gitignore  .markdownlint.json  .notebook-template.md  AI_EVALUATION_COMPLETE_GUIDE.md  CLAUDE.md  DISTILLATION_CHECKPOINT.md  README.md  TUTORIAL_CHANGELOG.md  coverage.json  dspy_optimization_flow.html  dspy_optimization_flow.md  dspy_optimization_flow.mmd  env.example  generate_test_queries.py  natural_language_user_queries.csv  package-lock.json  package.json  pyproject.toml  pytest.ini  tailwind.config.js  test_results.txt  test_results_classify.json
composable_app/: API_REFERENCE.md  ARCHITECTURE.md  Dockerfile  README.md  TUTORIAL_CHANGELOG.md  TUTORIAL_INDEX.md  deploy_to_cloud_run.sh  pyproject.toml  requirements.txt  test_setup.py
composable_app/agents/: generic_writer_agent.py
composable_app/data/: create_index.py  query_index.py
composable_app/prompts/: DisputeClassifier_identify_category_v3_optimized.j2
composable_app/tutorials/: README.md
composable_app/tutorials/concepts/: AGENTIC_SYSTEMS_CONCEPTUAL_GUIDE.md  architecture_deep_dive_dedup.md  dispute_resolution_architecture_deep_dive.md  horizontal_services_banking_MEDIUM.md  reflection_pattern.md
composable_app/tutorials/diagrams/: README.md  rag_flow.mmd  reviewer_panel.mmd  workflow.mmd
composable_app/tutorials/notebooks/: OPENAI_MIGRATION_RESULTS.md  TASK_7.1.1_FINAL_SUMMARY.md  TEST_RESULTS_7.1.1.md  advanced_patterns.ipynb  evaluation_tutorial.ipynb  llm_as_judge_tutorial.ipynb  multi_agent_pattern.ipynb  rag_pattern_tutorial.ipynb
composable_app/utils/: guardrails.py  llms.py
lesson-18/dispute-chatbot/: .env.example  SYNTHETIC_DATA_INTEGRATION_DEEP_DIVE.md  __init__.py  app.py  chainlit_explainability.py  chainlit_phases.py  chainlit_tools.py  logging.json  pyproject.toml  report_golden_set.html  report_golden_set_diverse.html  report_golden_set_diverse_v2.html  report_golden_set_diverse_v3.html  report_golden_set_diverse_v4.html  test_action.py  test_results_classify.json
lesson-18/dispute-chatbot/.chainlit/: config.toml
lesson-18/dispute-chatbot/.litellm_cache/: cache.db
lesson-18/dispute-chatbot/adapters/: __init__.py
lesson-18/dispute-chatbot/agents/: __init__.py
lesson-18/dispute-chatbot/chainlit/: __init__.py
lesson-18/dispute-chatbot/design/: 00_system_context.md  01_component_architecture.md  01_flow_diagrams.md  02_domain_model.md  02_domain_model.mmd  05_data_architecture.md  06_security_architecture.md  07_observability_strategy.md  08_optimized_classification_flow.md  V9_RAG_IMPLEMENTATION_PLAN.md  gate_0.1_checklist.md  gate_0.2_review_checklist.md  gate_0.5_security_checklist.md  gate_0.6_stakeholder_checklist.md
lesson-18/dispute-chatbot/evals/: __init__.py
lesson-18/dispute-chatbot/judges/: __init__.py
lesson-18/dispute-chatbot/orchestrators/: __init__.py
lesson-18/dispute-chatbot/phases/: __init__.py
lesson-18/dispute-chatbot/prompts/: DisputeClassifier_classify.j2  DisputeClassifier_identify_category.j2  DisputeClassifier_identify_category_v2.j2  DisputeClassifier_identify_category_v3.j2  DisputeClassifier_identify_category_v4.j2  DisputeClassifier_identify_category_v5_tot.j2  DisputeClassifier_identify_category_v6_mipro.j2  DisputeClassifier_identify_category_v6_tot.j2  DisputeClassifier_identify_category_v7_hybrid.j2  DisputeClassifier_identify_category_v8_rag.j2  DisputeClassifier_identify_category_v9_rag.j2  DisputeClassifier_select_code.j2  DisputeClassifier_select_code_v2.j2
lesson-18/dispute-chatbot/public/: dispute_theme.css
lesson-18/dispute-chatbot/schemas/: __init__.py
lesson-18/dispute-chatbot/scripts/: build_vector_store.py  debug_env.py  evaluate_v3_fix.py  evaluate_v3_fix_trace.py  evaluate_v4_trace.py  evaluate_v5_tot_trace.py  evaluate_v6_mipro_trace.py  evaluate_v6_trace.py  evaluate_v8_rag_trace.py  evaluate_v9_rag_trace.py  generate_classification_matrix.py  generate_diverse_golden_set.py  generate_diverse_golden_set_v2.py  generate_html_report.py  generate_natural_language_dataset.py  generate_report_v6_vs_v5.py  generate_report_v9_vs_v8.py  generate_trace_report_v2.py  generate_trace_report_v3.py  generate_trace_report_v4.py  generate_trace_report_v5_tot.py  generate_trace_report_v6.py  generate_trace_report_v7.py  generate_trace_report_v8.py  inject_network_context.py  stress_test_classify.py  test_natural_language_set.py  test_natural_language_v2_trace.py
lesson-18/dispute-chatbot/synthetic_data/: __init__.py  generate_phase1_data.py  schemas.py
lesson-18/dispute-chatbot/tests/: __init__.py  conftest.py  report.html  report_live.html  test_chainlit_ui.py  test_dispute_orchestrator.py  test_gather_evidence.py  test_generate_phase1_data.py  test_golden_set_classification.py  test_golden_set_live_llm.py  test_phase_handlers.py  test_phases_classify.py  test_phases_classify_v2.py  test_phases_classify_v5_tot.py  test_phases_classify_v7_hybrid.py  test_phases_classify_v8_rag.py  test_phases_classify_v9_rag.py  test_phases_gather_evidence.py  test_phases_monitor.py  test_phases_submit.py  test_phases_validate.py  (+1 more)
(+1203 files in other folders)
