[project]
name = "dispute-chatbot"
version = "0.1.0"
description = "AI-powered merchant dispute resolution assistant using Chainlit"
# readme = "README.md"  # Enable when README.md exists
requires-python = ">=3.11"
dependencies = [
    # Core framework
    "chainlit>=1.0",
    "pydantic>=2.0",
    "pydantic-ai>=0.0.13",

    # LLM providers
    "openai>=1.0",
    "anthropic>=0.18.0",

    # Template rendering
    "jinja2>=3.1",

    # Synthetic data generation
    "faker>=24.0",

    # Environment management
    "python-dotenv>=1.0",

    # Logging
    "python-json-logger>=2.0",

    # Async support
    "asyncio>=3.4",
    "aiohttp>=3.9",
    "redis>=5.0",

    # Data validation
    "pyyaml>=6.0",

    # Progress bars
    "tqdm>=4.66",

    # RAG / Embeddings
    "sentence-transformers>=3.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = [
    "adapters",
    "agents",
    "chainlit",
    "evals",
    "judges",
    "orchestrators",
    "phases",
    "schemas",
    "synthetic_data",
    "utils",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
